[package]
name = "bad64-sys"
version = "0.1.0"
authors = ["yrp <yrp604@protonmail.com>"]
edition = "2018"
description = "Rust bindings for Binja's arm64 disassembler"
license = "Apache-2.0"
repository = "https://github.com/yrp604/bad64-sys"
categories = ["external-ffi-bindings"]


[dependencies]

[build-dependencies]
bindgen = "0.53"
cc = "1"
glob = "0.3"
