[package]
name = "bad64-sys"
version = "0.1.3"
authors = ["yrp <yrp604@protonmail.com>"]
edition = "2018"
description = "Rust bindings for Binja's arm64 disassembler"
license = "Apache-2.0"
repository = "https://github.com/yrp604/bad64-sys"
categories = ["external-ffi-bindings"]


[dependencies]

[build-dependencies]
bindgen = { version = "0.56", default-features = false, features = ["runtime"] }
cc = { version = "1", features = ["parallel"] }
glob = "0.3"
