[package]
name = "bad64-sys"
version = "0.5.0"
authors = ["yrp <yrp604@protonmail.com>"]
edition = "2021"
description = "Rust bindings for Binja's arm64 disassembler"
license = "Apache-2.0"
repository = "https://github.com/yrp604/bad64-sys"
categories = ["external-ffi-bindings"]


[dependencies]

[build-dependencies]
bindgen = { version = "0.61", default-features = false, features = ["runtime"] }
cc = { version = "1", features = ["parallel"] }
glob = "0.3"
