# Personal+ edition (free edition doesn't get plugins due to no API access)
add_subdirectory(background_task)
add_subdirectory(breakpoint)
add_subdirectory(x86_extension)
add_subdirectory(workflows/inliner)
add_subdirectory(workflows/tailcall)
add_subdirectory(workflows/unflatten)

# Personal+ UI plugins (headless UI binaries is a weird concept but I guess technically possible)
if(NOT HEADLESS)
	add_subdirectory(uinotification)
endif()

# Commercial+ edition (needs headless support which personal does not include)
if(NOT PERSONAL)
	add_subdirectory(bin-info)
	add_subdirectory(cmdline_disasm)
	add_subdirectory(llil_parser)
	add_subdirectory(mlil_parser)
	add_subdirectory(print_syscalls)
endif()

# Ultimate+ edition (eg, enterprise and collaboration)
if(ULTIMATE)
	add_subdirectory(enterprise_test)
endif()
