[package]
name = "warp_ninja"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
binaryninja = { workspace = true, features = ["rayon"] }
binaryninjacore-sys.workspace = true
warp = { git = "https://github.com/Vector35/warp/", rev = "0ee5a6f" }
log = "0.4"
arboard = "3.4"
rayon = "1.10"
dashmap = "6.1"
walkdir = "2.5"
rfd = "0.15"
serde_json = "1.0"

# For sigem
env_logger = { version = "0.11", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
ar = { git = "https://github.com/mdsteele/rust-ar", optional = true }
tempdir = { version = "0.3.7", optional = true }

[dev-dependencies]
criterion = "0.5.1"
insta = { version = "1.38.0", features = ["yaml"] }

[features]
default = ["sigem"]
sigem = ["env_logger", "clap", "ar", "tempdir"]

[[bin]]
name = "sigem"
required-features = ["sigem"]

[[bench]]
name = "guid"
harness = false

[[bench]]
name = "convert"
harness = false

[[bench]]
name = "function"
harness = false