[package]
name = "warp_ninja"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
binaryninja = { workspace = true, features = ["rayon"] }
binaryninjacore-sys.workspace = true
warp = { git = "https://github.com/Vector35/warp/", tag = "1.0.0" }
log = "0.4"
itertools = "0.14.0"
dashmap = { version = "6.1", features = ["rayon"]}
rayon = "1.10"
arboard = "3.4"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.12.0", features = ["v4", "serde"] }
thiserror = "2.0"
ar = { git = "https://github.com/mdsteele/rust-ar" }
tempdir = "0.3.7"
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
directories = "6.0"
compact_str = { version = "0.9.0", features = ["serde"] }

# For reports
minijinja = "2.10.2"
minijinja-embed = "2.10.2"

[build-dependencies]
minijinja-embed = "2.10.2"

[dev-dependencies]
criterion = "0.6"
insta = { version = "1.42", features = ["yaml"] }

[[bench]]
name = "guid"
harness = false

[[bench]]
name = "convert"
harness = false

[[bench]]
name = "function"
harness = false