[package]
name = "workflow_objc"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
binaryninja = { workspace = true }
binaryninjacore-sys.workspace = true
log = "0.4"
dashmap = { version = "6.1", features = ["rayon"]}
once_cell = "1.20"
thiserror = "2.0"
bstr = "1.12"
