[package]
name = "dwarf_import"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
dwarfreader = { path = "../shared/" }
binaryninja.workspace = true
binaryninjacore-sys.workspace = true
gimli = "0.31"
log = "0.4"
iset = "0.2.2"
cpp_demangle = "0.4.3"
regex = "1"
indexmap = "2.5.0"